--- a/src/components/recipeDisplay/SimpleRecipeCard.scss
+++ b/src/components/recipeDisplay/SimpleRecipeCard.scss
@@ -28,7 +28,15 @@
 
     }
 
-    a {
+    .RecipeInfo-sourceName a,
+    .RecipeInfo-owner a {
+        color: $bright-white;
+        text-decoration: underline;
+        text-decoration-thickness: 1px;
+        text-underline-offset: 2px;
+    }
+
+    .RecipeInfo-name {
         color: $secondary;
         text-decoration: none;
     }
